# esx

./: .gitignore  .versionrc.json  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/: COMMIT_CONVENTION.md
scripts/: build-dmg.sh  release-core.mjs  release.mjs  release.test.mjs  tauri-wrapper.mjs
scripts/lib/: changelog-lib.mjs  changelog.mjs  changelog.test.mjs  release-args.mjs  release-version.mjs  release-version.test.mjs
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: admin-operations.ts  ai-analysis-client.ts  ai-generate-client.ts  ai-sse.ts  connection-import-export.ts  connection-security.ts  connection-state.ts  connection-tree.ts  connections.ts  console-parser.ts  console-shortcuts.ts  console-sidebar.ts  console-split.ts  console-toolbar.ts  delete-confirmations.ts  error-log-settings.ts  error-logs.ts  errors.ts  export-crypto.ts  http-client.ts  log-redaction.ts  panel-drag-selection.ts  request-analysis.ts  request-analyzer.ts  request-export-crypto.ts  request-import-export.ts  request-list.ts  request-safety.ts  request-state-mutations.ts  request-tags.ts  request-templates.ts  request-tree.ts  response-snapshot.ts  search-size-warning.ts  secrets-vault.ts  status-diagnostics.ts  status.ts  storage.ts  tauri.ts  (+2 more)
(+102 files in other folders)
