[package]
name = "esx"
version = "0.1.0"
description = "Elasticsearch Dev Tools desktop app built with Tauri"
authors = ["ushopal"]
edition = "2021"

[lib]
name = "esx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.5"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2.5.8"
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-store = "2"
